# sol-price-predictor

./: .gitignore  README.md  REPORTE_TECNICO.md  TECHNICAL_REPORT.md  main.py  pyproject.toml  requirements.txt
data/raw/: sol_usd_raw.csv
notebooks/: 01_data_ingestion.ipynb  02_eda.ipynb  03_feature_engineering.ipynb  04_modeling.ipynb  05_evaluation.ipynb
