[project]
name = "diplomado2025-entregable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "statsmodels>=0.14.0",
    "xgboost>=2.0.0",
    "yfinance>=0.2.36",
]
